--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     // "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
     // "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
     //"outFile": "./dist",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
-     "outDir": "./dist",                                   /* Specify an output folder for all emitted files. */
+     "outDir": "build",                                   /* Specify an output folder for all emitted files. */
                /* Allow 'import x from y' when a module doesn't have a default export. */
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
